Inserindo os primeiros links no HTML

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,7 +13,12 @@
 				<h2>Artigos</h2>
 			</header>
 			<article>
-				<h3>Artigo #1</h3>
+				<header>
+					<h3>Artigo #1</h3>
+				</header>
+				<p>
+					Criada pelo britânico <a href="https://www.linkedin.com/in/carlos-eduardo-guimaraes-da-cunha-7b9a12b3/"target="_Blank"> Tim Berners-Lee</a>, o acrônimo HTML significa HiperText Markup Language, traduzindo ao português: Linguagem de Marcação de Hipertexto.  O HTML é o componente básico da web, ele permite inserir o conteúdo e estabelecer a estrutura básica de um <a href="mailto:eduardogcunhald@hotmail.com">website</a>. Portanto, ele serve para dar significado e organizar as informações de uma página na web. Sem isso, o navegador não saberia exibir textos como elementos ou carregar imagens e outros conteúdos.
+				</p>
 			</article>
 		</section>
 		<footer></footer>
