adicionando as primeiras imagens

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<header>
+			<img src="img/Dudu1.jpg" alt="Imagem Rosto do Design">
 			<h1>Carlos Eduardo Guimaraes da Cunha</h1>
 		</header>
 		<section>
@@ -15,6 +16,7 @@
 			<article>
 				<header>
 					<h3>Artigo #1</h3>
+					<img src="img/cadeira.jpg" alt="Imagem da cadeira de escritório">
 				</header>
 				<p>
 					Criada pelo britânico <a href="https://www.linkedin.com/in/carlos-eduardo-guimaraes-da-cunha-7b9a12b3/"target="_Blank"> Tim Berners-Lee</a>, o acrônimo HTML significa HiperText Markup Language, traduzindo ao português: Linguagem de Marcação de Hipertexto.  O HTML é o componente básico da web, ele permite inserir o conteúdo e estabelecer a estrutura básica de um <a href="mailto:eduardogcunhald@hotmail.com">website</a>. Portanto, ele serve para dar significado e organizar as informações de uma página na web. Sem isso, o navegador não saberia exibir textos como elementos ou carregar imagens e outros conteúdos.
