--- a/HTML/index.html
+++ b/HTML/index.html
@@ -23,6 +23,18 @@
 				</p>
 			</article>
 		</section>
-		<footer></footer>
+		<footer>
+			<ol>
+				<li>
+				<a href="mailto:eduardogcunhald@hotmail.com" target="_Blank">Email</a>
+				</li>
+				<li>
+					<a href="https://www.linkedin.com/in/carlos-eduardo-guimaraes-da-cunha-7b9a12b3/" target="_Blank">Linkedin</a>
+				</li>
+				<li>
+					<a href="https://github.com/eduardogcunha" target="_Blank">GitHub</a>
+				</li>
+			</ol>
+		</footer>
 	</body>
 </html>
